# pinocchio-interface

./: CMakeLists.txt  README.md  package.xml
include/pinocchio-interface/: robot.h
robots/: panda_arm_hand.urdf  panda_arm_hand_fixed_fingers.urdf  panda_arm_hand_fixed_fingers_inertia.urdf
src/: robot.cpp
